# JATIC-Library

./: .gitignore  LICENSE  README.md  build.bat  jatic-library.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
docs/: 2026-05-20_開発日記.html  2026-05-22_開発日記.html  BETA_TEST.md  BETA_TEST_LOG.md  DESIGN.md  DEV_SETUP.md  DEV_STATUS.md  QA_REVIEW_2026-05-22.md  RELEASE_v0.1.0-beta.1.md  ROADMAP.md  UI_FLOW.md  USER_MANUAL.md
docs/instructions/: ALIGNMENT.md  INST_01_project_init.md  INST_02_targets_url.md  INST_03_settings.md  INST_04_repository.md  INST_05_logger_notifier.md  INST_06_downloader_manifest.md  INST_07_playwright_scraper.md  INST_08_scheduler_cli.md  INST_09_main_window.md  INST_10_settings_tab.md  INST_11_library_tab.md  INST_12_download_progress.md  INST_13_dl_404_rescrape.md  INST_14_library_actions.md  INST_15_tags.md  INST_16_calendar_missing.md  INST_17_compare_tab.md  INST_18_export_chart.md  INST_19_git_sync.md  INST_20_system_tray.md  INST_21_pyinstaller.md  INST_22_library_sort_debounce.md  INST_23_settings_dirty_indicator.md  INST_24_delete_order_safety.md  INST_25_playwright_guard_expand.md  INST_26_sqlite_wal_mode.md  INST_27_playwright_first_run_setup.md  INST_28_pyinstaller_build_refine.md  INST_29_release_smoke_test.md  INST_30_release_docs.md  INST_31_reliability_perf_patch.md  PERF_MEASUREMENT_RULES.md  (+2 more)
scripts/: package-beta.ps1  prepare_browser_bundle.py
tests/: test_cli.py  test_config.py  test_constants.py  test_csv_loader.py  test_csv_row_count.py  test_delete_file.py  test_download_progress_dialog.py  test_downloader.py  test_downloader_rescrape.py  test_exporter.py  test_git_sync.py  test_http_client.py  test_library_scan_cache.py  test_library_scanner.py  test_library_storage.py  test_library_tab.py  test_library_tab_sort.py  test_logger.py  test_main_window.py  test_manifest.py  test_merge_csv.py  test_notifier.py  test_paths.py  test_playwright_env.py  test_playwright_guard.py  test_playwright_scraper.py  test_playwright_setup_dialog.py  test_publication_postprocess.py  test_publication_status.py  test_qa_fixes.py  test_repository.py  test_repository_threading.py  test_scheduler.py  test_scheduler_flow.py  test_settings_dirty.py  test_settings_tab.py  test_startup.py  test_store.py  test_targets.py  test_tray.py  (+2 more)
(+51 files in other folders)
